--- a/src/app/components/faqs/faqs.component.html
+++ b/src/app/components/faqs/faqs.component.html
@@ -1,6 +1,6 @@
-
 <div class="main-faqs-container">
-    <div class="faqs-container md:px-8 md:mx-6 md:mt-4">
+    <app-nav-bar></app-nav-bar>
+    <div class="faqs-container md:px-8 md:mx-6 md:mt-4 md:border-round-md">
         <div class="title-container flex w-full align-items-center">
             <i class="md:hidden fa-solid fa-arrow-left text-white text-center w-1"></i>
             <h2 class="text-white text-center w-11 md:pr-0 md:w-full lg:mb-0">PREGUNTAS FRECUENTES</h2>
