--- a/src/app/components/profile-user/profile-user.component.html
+++ b/src/app/components/profile-user/profile-user.component.html
@@ -1,4 +1,5 @@
 <div class="main-profile-container">
+    <app-nav-bar></app-nav-bar>
     <div class="profile-container md:px-8 md:mx-6 md:my-4 md:border-round-md md:shadow-4 lg:px-0">
         <div class="title-container flex w-full align-items-center md:hidden">
             <i class="fa-solid fa-arrow-left text-white text-center w-1"></i>
@@ -73,4 +74,5 @@
             </div> -->
         </div>
     </div>
+    <app-footer></app-footer>
 </div>
