--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -4,7 +4,7 @@
     margin-bottom: 30px;
     padding: 0px;
     color: var(--base-white, #FFF);
-    font-family: 'Roboto';
+    font-family: 'MADE Soulmaze', sans-serif;
     font-size: 20px;
-    font-weight: bold;
+    font-weight: 400;
 }
