--- a/src/app/components/profile-user/profile-user.component.html
+++ b/src/app/components/profile-user/profile-user.component.html
@@ -37,7 +37,7 @@
                     <div class="flex justify-content-between">
                         <div class="mb-4 mr-3 w-6 lg:w-7">
                             <label class="block text-black mb-2" for="fechaNacimiento">
-                                Fecha de Nacimiento
+                                Fecha de Nac.
                             </label>
                             <input id="fechaNacimiento" type="text" name="fechaNacimiento"
                                 class="p-inputtext w-full py-1 px-3 rounded border border-gray-300 focus:outline-none focus:border-transparent"
