benefit-popup agregado

--- a/src/app/components/benefit-popup/benefit-popup.component.html
+++ b/src/app/components/benefit-popup/benefit-popup.component.html
@@ -13,6 +13,11 @@
                 <label for="description" class="block font-semibold">Descripción</label>
                 <input id="description" type="text" [(ngModel)]="description" name="description" class="w-full border border-gray-300 rounded p-2" />
             </div>
+            <!-- Descuentos -->
+            <div class="mb-4">
+                <label for="discount" class="block font-semibold">Descuento</label>
+                <input id="discount" type="discount" [(ngModel)]="discount" name="discount" class="w-full border border-gray-300 rounded p-2" />
+            </div>
             <!-- Puntos -->
             <div class="mb-4">
                 <label for="points" class="block font-semibold">Puntos</label>
