agregado componente hamburger-menu

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,9 @@
 <div class="">
+    <!-- Elemento para dispositivos móviles y tabletas -->
+    <div class="card flex justify-content-between m-4 mt-4 md:hidden">
+        <app-logo></app-logo>
+        <app-hamburger-menu></app-hamburger-menu>
+    </div>
     <app-nav-bar></app-nav-bar>
     <app-user></app-user>
     <h2 class="title md:ml-7">DESTACADAS</h2>
