--- a/src/app/components/faqs/faqs.component.css
+++ b/src/app/components/faqs/faqs.component.css
@@ -11,7 +11,7 @@ h2 {
     font-family: 'MADE Soulmaze', sans-serif;
     font-weight: 400;
     font-size: 20px;
-    padding-right: 8%;
+    padding-left: 23px;
 }
 h3, h4, .p-accordion-header-text {
     font-family: 'Roboto', sans-serif;
