--- a/src/app/components/profile-user/profile-user.component.html
+++ b/src/app/components/profile-user/profile-user.component.html
@@ -2,8 +2,9 @@
     <app-nav-bar></app-nav-bar>
     <div class="profile-container md:px-8 md:mx-6 md:my-4 md:border-round-md md:shadow-4 lg:px-0">
         <div class="title-container flex w-full align-items-center md:hidden">
-            <i class="fa-solid fa-arrow-left text-white text-center w-1"></i>
+            <a class="no-underline" href="/home"><i class="md:hidden fa-solid fa-arrow-left text-white text-center w-1 mx-2"></i></a>
             <h2 class="text-white text-center w-11 md:pr-0 md:w-full lg:mb-0">MIS DATOS</h2>
+            <app-hamburger-menu class="md:hidden"></app-hamburger-menu>
         </div>
         <div class="center-container">
             <div class="my-4 py-1 px-4 text-center bg-gray-300 border-round-xl shadow-4 lg:mt-5 lg:mb-6">
