agregado componente menu-viewer

--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -6,6 +6,7 @@
             <div class="space-x-4">
                 <a class="button-nav-desktop no-underline text-white" href="/profile-user">MIS DATOS</a>
                 <a class="button-nav-desktop no-underline text-white" href="/faqs">SOBRE NOSOTROS</a>
+                <a class="button-nav-desktop no-underline text-white" href="/menu-viewer">MENÚ</a>
                 <a class="button-nav-desktop no-underline text-white" href="/" (click)="redirectLogin()">LOG OUT</a>
             </div>
         </div>
