--- a/src/app/components/business/customers/customers.component.html
+++ b/src/app/components/business/customers/customers.component.html
@@ -1,5 +1,5 @@
 <div class="text-center bg-gray-50">
-    <div class="px-4">
+    <div>
         <p-table 
             [value]="customers"  
             dataKey="code" 
