agregado zoom para menu-viewer

--- a/src/app/components/menu-viewer/menu-viewer.component.css
+++ b/src/app/components/menu-viewer/menu-viewer.component.css
@@ -7,3 +7,9 @@ h2 {
 .title-container {
     background-color: #5C4092;
 }
+::ng-deep .p-button {
+    color: white;
+    background: #E61F85 !important;
+    border-radius: 0.25rem;
+    border-width: 0px !important;
+}
