modificado estilos componente menu-viewer

--- a/src/app/components/menu-viewer/menu-viewer.component.css
+++ b/src/app/components/menu-viewer/menu-viewer.component.css
@@ -1,3 +1,6 @@
+.main-menu-viewer-container {
+    background-color: rgba(255, 255, 255, 0.53);
+}
 h2 {
     font-family: 'MADE Soulmaze', sans-serif;
     font-weight: 400;
@@ -12,4 +15,10 @@ h2 {
     background: #E61F85 !important;
     border-radius: 0.25rem;
     border-width: 0px !important;
+}
+
+@media(min-width: 768px) {
+    .main-menu-viewer-container {
+        background: linear-gradient(0deg, rgba(234,84,147,1) 0%, rgba(92,64,146,1) 100%);
+    }
 }
