--- a/src/app/components/benefit-popup-delete/benefit-popup-delete.component.html
+++ b/src/app/components/benefit-popup-delete/benefit-popup-delete.component.html
@@ -1,4 +1,4 @@
-<div class="flex items-center justify-center rounded-md w-5 h-8 border-2 border-gray-300 ml-1 hover:bg-pink-400 hover:border-white custom-icon-container">
+<div class="flex items-center justify-center rounded-md h-8 border-2 border-gray-300 ml-1 hover:bg-pink-400 hover:border-white custom-icon-container">
     <i class="pi pi-trash text-gray-700 cursor-pointer" (click)="showDialog()"></i>
 </div>
 <p-dialog header="Eliminar Promoción" [(visible)]="visible" [style]="{ width: '40vw' }">
