--- a/src/app/components/benefit-popup-edit/benefit-popup-edit.component.html
+++ b/src/app/components/benefit-popup-edit/benefit-popup-edit.component.html
@@ -1,1 +1,48 @@
-<p>benefit-popup-edit works!</p>
+<div class="flex items-center justify-center rounded-md h-8 border-2 border-gray-300 ml-1 hover:bg-pink-400 hover:border-white custom-icon-container">
+    <i class="pi pi-trash text-gray-700 cursor-pointer" (click)="showDialog()"></i>
+</div>
+<p-dialog header="Eliminar Promoción" [(visible)]="visible" [style]="{ width: '40vw' }">
+    <div class="flex py-2 justify-content-center">
+        <div class="max-w-md mx-auto p-4 border border-gray-300 rounded-lg">
+            <!-- Título -->
+            <div class="mb-4">
+                <label for="title" class="block font-semibold">Titulo</label>
+                <input id="title" type="text" [(ngModel)]="title" name="title" class="w-full border border-gray-300 rounded p-2" />
+            </div>
+            <!-- Descripción -->
+            <div class="mb-4">
+                <label for="description" class="block font-semibold">Descripción</label>
+                <input id="description" type="text" [(ngModel)]="description" name="description" class="w-full border border-gray-300 rounded p-2" />
+            </div>
+            <!-- Imagen -->
+            <div class="mb-4">
+                <label for="image" class="block font-semibold">Imagen</label>
+                <p-fileUpload
+                    type="file"
+                    name="image"
+                    mode="basic"
+                    chooseLabel="Seleccione un archivo..."
+                    (onSelect)="onFileSelect($event)"
+                ></p-fileUpload>
+            </div>
+            <!-- Descuentos -->
+            <div class="mb-4">
+                <label for="discount" class="block font-semibold">Descuento</label>
+                <input id="discount" type="discount" [(ngModel)]="discount" name="discount" class="w-full border border-gray-300 rounded p-2" />
+            </div>
+            <!-- Puntos -->
+            <div class="mb-4">
+                <label for="points" class="block font-semibold">Puntos</label>
+                <input id="points" type="points" [(ngModel)]="points" name="points" class="w-full border border-gray-300 rounded p-2" />
+            </div>
+            <!-- Botón de Cancelar -->
+            <button type="button" class="p-button bg-blue-500 text-white py-2 px-4 rounded" (click)="cancel()">
+                Cancelar
+            </button>
+            <!-- Botón de Guardar -->
+            <button type="button" class="p-button bg-blue-500 text-white py-2 px-4 rounded" (click)="editBenefit()">
+                Guardar
+            </button>
+        </div>
+    </div>
+</p-dialog>
