--- a/src/app/components/business/promotions/promotions.component.html
+++ b/src/app/components/business/promotions/promotions.component.html
@@ -28,7 +28,9 @@
         <ng-template pTemplate="body" let-benefits>
             <tr class="text-xl mx-10">
                 <td>{{benefits.benefitname}}</td>
-                <td><img src="../../../assets/img/Rectangle 7.png" width="100" class="shadow-4" /></td>
+                <td>
+                    <img [src]="getImagenUrl(benefits.img)" class="h-18 w-20 shadow-4">
+                </td>
                 <td>{{benefits.description}}</td>
                 <td class="whitespace-nowrap"><span class="text-pink-600 font-normal">{{benefits.points_req}}</span> puntos</td>
                 <td>
@@ -36,7 +38,7 @@
                         <div class="flex items-center justify-center rounded-md w-5 h-8 border-2 border-gray-300 hover:bg-pink-400 hover:border-white custom-icon-container">
                             <i class="pi pi-pencil text-gray-700 cursor-pointer"></i>
                         </div>
-                        <app-benefit-popup-delete [benefitId]="benefits.id"></app-benefit-popup-delete>
+                        <app-benefit-popup-delete class="w-5" [benefitId]="benefits.id"></app-benefit-popup-delete>
                     </div>
                 </td>
             </tr>
