modifico logo con ajustes en home

--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,4 +1,6 @@
-<div class="flex justify-content-center p-3 surface-900 custom-rounded-div">
-    <a class="no-underline" href="/home"><span class="text-white text-xl">Antares</span></a>
+<div class="flex md:hidden justify-content-center p-2 custom-rounded-div">
+    <a class="no-underline" href="/home"><img class="isotipo" src="/assets/isotipo.png" alt=""></a>
 </div>
-
+<div class="hidden md:flex justify-content-center p-2 custom-rounded-div">
+    <a class="no-underline" href="/home"><img class="logo" src="/assets/logo-mobile.png" alt=""></a>
+</div>
