--- a/src/app/components/benefit-popup/benefit-popup.component.html
+++ b/src/app/components/benefit-popup/benefit-popup.component.html
@@ -35,7 +35,7 @@
                 <input id="points" type="points" [(ngModel)]="points" name="points" class="w-full border border-gray-300 rounded p-2" />
             </div>
             <!-- Botón de Guardar -->
-            <button type="button" class="p-button bg-blue-500 text-white py-2 px-4 rounded" (click)="saveBenefit()">
+            <button type="button" class="p-button bg-blue-500 font-semibold text-white py-2 px-4 rounded" (click)="saveBenefit()">
                 Guardar
             </button>
         </div>
