--- a/src/app/components/benefit-popup-edit/benefit-popup-edit.component.html
+++ b/src/app/components/benefit-popup-edit/benefit-popup-edit.component.html
@@ -1,7 +1,7 @@
 <div class="flex items-center justify-center rounded-md h-8 border-2 border-gray-300 ml-1 hover:bg-pink-400 hover:border-white custom-icon-container">
-    <i class="pi pi-trash text-gray-700 cursor-pointer" (click)="showDialog()"></i>
+    <i class="pi pi-pencil px-2 text-gray-700 cursor-pointer" (click)="showDialog()"></i>
 </div>
-<p-dialog header="Eliminar Promoción" [(visible)]="visible" [style]="{ width: '40vw' }">
+<p-dialog header="Editar Promoción" [(visible)]="visible" [style]="{ width: '40vw' }">
     <div class="flex py-2 justify-content-center">
         <div class="max-w-md mx-auto p-4 border border-gray-300 rounded-lg">
             <!-- Título -->
@@ -17,6 +17,7 @@
             <!-- Imagen -->
             <div class="mb-4">
                 <label for="image" class="block font-semibold">Imagen</label>
+                <img [src]="imageToShow" class="max-h-20 w-20 shadow-4">
                 <p-fileUpload
                     type="file"
                     name="image"
@@ -36,11 +37,11 @@
                 <input id="points" type="points" [(ngModel)]="points" name="points" class="w-full border border-gray-300 rounded p-2" />
             </div>
             <!-- Botón de Cancelar -->
-            <button type="button" class="p-button bg-blue-500 text-white py-2 px-4 rounded" (click)="cancel()">
+            <button type="button" class="p-button bg-blue-500 font-semibold text-white py-2 px-4 ml-3 mr-1 rounded" (click)="cancel()">
                 Cancelar
             </button>
             <!-- Botón de Guardar -->
-            <button type="button" class="p-button bg-blue-500 text-white py-2 px-4 rounded" (click)="editBenefit()">
+            <button type="button" class="p-button bg-blue-500 font-semibold text-white py-2 px-4 rounded" (click)="editBenefit()">
                 Guardar
             </button>
         </div>
