agregado navegación business

--- a/src/app/components/business/business.component.html
+++ b/src/app/components/business/business.component.html
@@ -1,7 +1,7 @@
 <div class="flex">
     <!-- left-container -->
     <div class="w-1/12 pt-4 bg-purple-700">
-        <app-side-nav></app-side-nav>
+        <app-side-nav [businessId]="businessId"></app-side-nav>
     </div>
 
     <!-- right-container -->
