--- a/src/app/components/benefit-popup-edit/benefit-popup-edit.component.html
+++ b/src/app/components/benefit-popup-edit/benefit-popup-edit.component.html
@@ -27,10 +27,10 @@
                 ></p-fileUpload>
             </div>
             <!-- Descuentos -->
-            <div class="mb-4">
+            <!-- <div class="mb-4">
                 <label for="discount" class="block font-semibold">Descuento</label>
                 <input id="discount" type="discount" [(ngModel)]="discount" name="discount" class="w-full border border-gray-300 rounded p-2" />
-            </div>
+            </div> -->
             <!-- Puntos -->
             <div class="mb-4">
                 <label for="points" class="block font-semibold">Puntos</label>
