--- a/src/app/components/logo/logo.component.html
+++ b/src/app/components/logo/logo.component.html
@@ -1,6 +1,6 @@
-<div class="flex md:hidden justify-content-center p-2 custom-rounded-div">
-    <a class="no-underline" href="/home"><img class="isotipo" src="/assets/isotipo.png" alt=""></a>
+<div class="flex md:hidden justify-content-center p-2 custom-rounded-div cursor-pointer" (click)="(redirectHome)">
+    <img class="isotipo" src="/assets/isotipo.png" alt="">
 </div>
-<div class="hidden md:flex justify-content-center p-2 custom-rounded-div">
-    <a class="no-underline" href="/home"><img class="logo" src="/assets/logo-mobile.png" alt=""></a>
+<div class="hidden md:flex justify-content-center p-2 custom-rounded-div cursor-pointer" (click)="(redirectHome)">
+    <img class="logo" src="/assets/logo-mobile.png" alt="">
 </div>
