--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -12,9 +12,7 @@
         style="width: 90%; background: rgba(1, 1, 1, 0.8)">
         <div class="flex justify-content-evenly lg:px-8">
             <h3 class="button-create-account text-white border-bottom-3 pb-1">CREAR CUENTA</h3>
-            <a href="/">
-                <h3 class="button-log-in text-white cursor-pointer">INICIAR SESIÓN</h3>
-            </a>
+            <h3 class="button-log-in text-white cursor-pointer" (click)="toLogin()">INICIAR SESIÓN</h3>
         </div>
         <div class="flex flex-column align-items-center">
             <h4 class="text-white mb-0 mt-2">COMENZÁ A SUMAR</h4>
