--- a/src/app/components/user-profile-data/user-profile-data.component.html
+++ b/src/app/components/user-profile-data/user-profile-data.component.html
@@ -35,7 +35,7 @@
                     <input id="fechaNacimiento" type="text" name="fechaNacimiento"
                         class="p-inputtext w-full py-1 px-3 rounded border border-gray-300 focus:outline-none focus:border-transparent"
                         required
-                        [value]="userDetail.birthday" />
+                        [value]="birthday" />
                 </div>
                 <div class="mb-4 w-6 lg:w-5">
                     <label class="block text-black mb-2" for="genero">
